# alderromel-bot

./: .gitignore  README.md  pyproject.toml
motor/: engine_test.py
src/: constants.py  gps.py
src/bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/camera/: main.py
src/gps/: .main.py.swp  main.py  new-gps.py  new_gps.py
src/motor/: ball-follower.py  ball_follower.py  engine_test.py
src/server/: main.py
